--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,35 +1,24 @@
 ---
+layout: default
 ---
-<html>
-    <head>
-        <title>Web RDF</title>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    </head>
-    <body>
-        <div>
-            <p>Welcome to Web RDF. A company tasked with maintaining RDFs web presentation that is also completely fictional. No character mentioned here is a real live persona and similarities with real people are purely coincidental.</p>
-            <p>Web RDF uses Jekyll-RDF for each of their web appearances. Jekyll-RDF is a plugin for the site building system Jekyll, made by the creators of GitHub. The following site will showcase how to use Jekyll-RDF for enhancing your site with RDF technologies.</p>
-            <div>
-                <h1>News</h1>
-                {% assign newsCollection = "wrdf:News" | rdf_get %}
-                {% include Reports.html reportCollection = newsCollection %}
-            </div>
-            <div>
-                <h1>Personal</h1>
-                {% assign personalContainer = "wrdf:Employee" | rdf_get %}
-                {% include Employees.html employeeC = personalContainer %}
-            </div>
-            <div>
-                <h1>Projects</h1>
-                {% include ProjectsShort.html %}
-            </div>
-            <div>
-                <h1>Partners and Associates</h1>
-            </div>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    </body>
-</html>
+<div class="jumbotron">
+    <p>Welcome to Web RDF. A company tasked with maintaining RDFs web presentation that is also completely fictional. No character mentioned here is a real live persona and similarities with real people are purely coincidental. Web RDF uses Jekyll-RDF for each of their web appearances. Jekyll-RDF is a plugin for the site building system Jekyll, made by the creators of GitHub. The following site will showcase how to use Jekyll-RDF for enhancing your site with RDF technologies.</p>
+</div>
+<div class="container">
+    <h1 class="row">News</h1>
+    {% assign newsCollection = "wrdf:News" | rdf_get %}
+    {% include Reports.html reportCollection = newsCollection %}
+</div>
+<div class="container">
+    <h1 class="row">Personal</h1>
+    {% assign personalContainer = "wrdf:Employee" | rdf_get %}
+    {% include Employees.html employeeC = personalContainer %}
+</div>
+<div class="container">
+    <h1 class="row">Projects</h1>
+    {% include ProjectsShort.html %}
+</div>
+<div class="container">
+    <h1 class="row">Partners and Associates</h1>
+</div>
+
