--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,27 @@
         <title>Web RDF</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/basic.css">
+
     </head>
     <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Web RDF</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/News">News</a></li>
+                    <li><a href="/Personal">Personal</a></li>
+                    <li><a href="/Projects">Projects</a></li>
+                </ul>
+
+            </div>
+        </nav>
         <div class="container-fluid">
-        {{content}}
+            {{content}}
         </div>
         {% include bootstrap.html %}
     </body>
