--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="jumbotron">
+<div class="jumbotron" style="margin-top: 30px">
     <p>Welcome to Web RDF. A company tasked with maintaining RDFs web presentation that is also completely fictional. No character mentioned here is a real live persona and similarities with real people are purely coincidental. Web RDF uses Jekyll-RDF for each of their web appearances. Jekyll-RDF is a plugin for the site building system Jekyll, made by the creators of GitHub. The following site will showcase how to use Jekyll-RDF for enhancing your site with RDF technologies.</p>
 </div>
 <div class="container">
@@ -12,7 +12,7 @@ layout: default
 <div class="container">
     <h1 class="row">Personal</h1>
     {% assign personalContainer = "wrdf:Employee" | rdf_get %}
-    {% include Employees.html employeeC = personalContainer %}
+    {% include Employees.html employeeC = personalContainer limit = 3 %}
 </div>
 <div class="container">
     <h1 class="row">Projects</h1>
